# EssoraDM

./: CMakeLists.txt  ESSORA-INTEGRATION.txt  ESSORA-NOTES.txt  ESSORADM-FIXES.txt  README  README.md  app.cpp  build-essoradm.sh  cfg.cpp  cfg.h  const.h  essoradm.1  essoradm.conf  essoradm.service  panel.cpp
assets/essora-init/etc/essora-init.d/: desktop-start  essora-splash  essora-splash.save
assets/essora-init/etc/essora-init.d/boot.d/: desktop-start  essora-splash
assets/essora-init/usr/local/autologin/: autologin-slim.sh  gksu
assets/essora-init/usr/share/applications/: autologin-slim.desktop
debian/: control  postinst
hooks/: pre-login  pre-start
themes/default/: CMakeLists.txt  COPYRIGHT.background  essoradm.theme
